--- a/pymaceuticals_assignment.ipynb
+++ b/pymaceuticals_assignment.ipynb
@@ -6,7 +6,15 @@
    "id": "875e28e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Data Analysis:\n",
+    "#1- This is a pharmaceutical data which is studying different tumor treatment drug on 249 mice \n",
+    "#and included mice of different age, different weight and both gender, which make study valuavle.\n",
+    "#2- While doing analysis of this data, I found that all the drugs are normaly distributed \n",
+    "# which make this study outcome reliable.\n",
+    "#3- In this study, they used both gender in almost equal numbers, male were 50.7% and female were 49.3% \n",
+    "#and the drug which looks like most effective for the treatment of tumor is 'Capomulin'. "
+   ]
   },
   {
    "cell_type": "code",
